Fixed letter text alignment and image size

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
     position: absolute;
     background-color: #eae2b7;
     width: 270px;
-    height: 300px;
+    height: 170px;
     top: 5px;
     left: 15px;
     box-shadow: -5px -5px 100px rgba(0, 0, 0, 0.4);
@@ -126,7 +126,7 @@ body {
 }
 
 .card {
-    width: 300px;
+    width: 300px; /* Adjust width as needed */
     padding: 20px;
     text-align: center;
 }
